--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>Header Logo</div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <div>
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller fontn and the colour is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <img src="images/DesiredOutcome.png" alt="this is a placeholder for an image">
+    </header>
+    <div>
+        <h2>Some random information.</h2>
+        <div class="cardContainer">
+            <div class="card"><img src="" alt="image1">this is some subtext under an illustration or image</div>
+            <div class="card"><img src="" alt="image2">this is some subtext under an illustration or image</div>
+            <div class="card"><img src="" alt="image3">this is some subtext under an illustration or image</div>
+            <div class="card"><img src="" alt="image4">this is some subtext under an illustration or image</div>
+        </div>
+    </div>
+    <div>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+    <div>
+        <div>
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <footer>
+        <p>Copywright The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
