--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     </div>
     
     <div class="quote-section">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <div>
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="thor">-Thor, God of Thunder</p>
+        </div>
     </div>
-    <!--
+    
     <div>
         <div>
         <h3>Call to action! It's time!</h3>
@@ -53,6 +55,7 @@
         </div>
         <button>Sign up</button>
     </div>
+    <!--
     <footer>
         <p>Copywright The Odin Project 2021</p>
     </footer>
