--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
         </div>
     </div>
     
-    <div>
-        <div>
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="call-section">
+        <div class="call">
+            <div>
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button>Sign up</button>
+            </div>
         </div>
-        <button>Sign up</button>
     </div>
     <!--
     <footer>
