Finished footer and added some more styling.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             </div>
         </div>
     </div>
-    <!--
+    
     <footer>
-        <p>Copywright The Odin Project 2021</p>
+        <p>Copywright © The Odin Project 2021</p>
     </footer>
-    -->
+    
 </body>
 </html>
