--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="header">
+        <div class="topheader">
             <div class="logo">Header Logo</div>
             <nav>
                 <ul>
